# legal-mcp

./: .gitignore  .pre-commit-config.yaml  .rules  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  TOOLS.md  docker-compose.gpu.yml  docker-compose.yml  flake.nix  pyproject.toml
.agent/goals/: scratchpad.md
.agent/goals/01-Initial-Setup-And-Release/: scratchpad.md
.agent/goals/02-Legal-MCP/: scratchpad.md
.agent/goals/03-Custom-Document-Ingestion-and-Semantic-Search/: scratchpad.md
.agent/goals/04-German-State-Law-Sources-And-Indexing/: scratchpad.md
.agent/goals/05-DevOps-Helm-K8s-Environment/: scratchpad.md
.agent/goals/06-Multi-Jurisdiction-Legal-Framework/: scratchpad.md
.agent/goals/07-International-Construction-Law-Corpus/: scratchpad.md
.agent/goals/08-Cross-Jurisdiction-Comparison-Tool/: scratchpad.md
.devops/helm/legal-mcp/: Chart.yaml  README.md  values.yaml
.devops/helm/values/: aks-production.yaml  (+2 more)
.github/: copilot-instructions.md  main-branch-protection.json
.github/workflows/: cd.yml  ci.yml  publish.yml  release.yml
.zed/: settings.json
app/: __init__.py  __main__.py  config.py  server.py  tracing.py
app/catalog/: store.py
app/custom_documents/: embeddings.py  file_ingestion.py  pipeline.py
app/ingestion/: __init__.py  embeddings.py  model_manager.py  pipeline.py  tei_client.py
app/prompts/: __init__.py
app/rag/: __init__.py  context.py  llm_client.py  pipeline.py  prompts.py  reranker.py
app/tools/: __init__.py  catalog.py  custom_documents.py  german_laws.py  health.py
data/: .gitignore
data/html/: manifest.txt
docker/: Dockerfile  Dockerfile.base  Dockerfile.dev
docs/: README.md
legal_mcp/net/: http2_fetcher.py
scripts/: analyze_corpus.py  berlin_portal_discovery.py  berlin_portal_retrieval_probe.py  berlin_probe_endpoints.py  download_all_laws.py  download_all_laws_fast.py  download_corpus.py  ingest_from_html.py  ingest_priority_laws.py  test_discovery.py  test_embeddings.py  test_embeddings_simple.py  test_german_law_loader.py  test_html_parsing.py  test_langchain_html.py  test_mcp_tools.py  test_selectolax_parsing.py
scripts/berlin/: extract_document_playwright.py  extract_from_sitemap_playwright.py  normalize_playwright_batch.py
scripts/catalog/: build_catalog_sqlite.py
src/legal_mcp/: __init__.py
tests/: __init__.py  conftest.py  test_catalog_tool.py  test_custom_documents_tools.py  test_file_ingestion.py  test_german_laws_tools.py  test_http2_fetcher.py  test_ingestion_pipeline.py  test_markdown_sections.py  test_markitdown_converter.py  test_model_manager.py  test_rag_pipeline.py  test_server.py  test_tei_client.py
(+58281 files in other folders)
